--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "formik": "^2.4.5",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "yup": "^1.3.2"
   }
 }
