--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.5",
     "i": "^0.3.7",
     "i18next": "^23.7.6",
+    "jszip": "^3.10.1",
     "mobx-react-lite": "^4.0.5",
     "npm": "^10.2.4",
     "react": "^18.2.0",
