--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-i18next": "^13.5.0",
     "react-loading": "^2.0.3",
     "react-modal": "^3.16.1",
+    "react-pdf": "^7.7.0",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "formik": "^2.4.5",
     "jsdom": "^22.1.0",
+    "pdfjs-dist": "^4.0.379",
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
